5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/3555/executions/1601_1800.log
== SUBMITION (2019-03-21 14:04:52) 
-- CODE:
a=float(input())
b=float(input())
c=float(input())

r = (a**2+b**2+c**2)/(a+b+c)

print(r)

-- EXECUTION TIME:
0.161887
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
25.666666666666668
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
342.8680203045685
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
106.15094339622641
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 14:04:54) 
-- CODE:
a=float(input())
b=float(input())
c=float(input())

r = (a**2+b**2+c**2)/(a+b+c)

print(r)

-- OUTPUT:
25.666666666666668
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 14:05:17) 
-- CODE:
a=float(input())
b=float(input())
c=float(input())

r = (a**2+b**2+c**2)/(a+b+c)

print(round(r,6)

-- EXECUTION TIME:
0.146173
-- ERROR:
  File "/home/codebench/codes/1601/1800/main.py", line 8
    
                    ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 14:05:24) 
-- CODE:
a=float(input())
b=float(input())
c=float(input())

r = (a**2+b**2+c**2)/(a+b+c)

print(round(r,6))

-- EXECUTION TIME:
0.131859
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
25.666667
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
342.86802
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
106.150943
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 14:05:40) 
-- CODE:
a=float(input())
b=float(input())
c=float(input())

r = (a**2+b**2+c**2)/(a+b+c)

print(round(r,6))

-- OUTPUT:
25.666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 14:05:56) 
-- CODE:
a=float(input())
b=float(input())
c=float(input())

r = (a**2+b**2+c**2)/(a+b+c)

print(round(r,6))

-- EXECUTION TIME:
0.176286
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
25.666667
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
342.86802
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
106.150943
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 14:06:48) 
-- CODE:
a=float(input())
b=float(input())
c=float(input())

r = (a**2+b**2+c**2)/(a+b+c)

print(round(r,6))

-- OUTPUT:
25.666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 14:27:27) 
-- CODE:
a=float(input())
b=float(input())
c=float(input())

r = (a**2+b**2+c**2)/(a+b+c)

print(round(r,6))

-- OUTPUT:
25.666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 14:27:44) 
-- CODE:
a=float(input())
b=float(input())
c=float(input())

r = (a**2+b**2+c**2)/(a+b+c)

print(round(r,6))

-- EXECUTION TIME:
0.172069
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
25.666667
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
342.86802
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
106.150943
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 09:43:13) 
-- CODE:
a=float(input())
b=float(input())
c=float(input())

r = (a**2+b**2+c**2)/(a+b+c)

print(round(r,7))

-- EXECUTION TIME:
0.184487
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
25.6666667
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
342.8680203
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
106.1509434
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
